--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <body>
-
-    <img src="iAkDZWm.jpg" width="500" height="333">
-    <p>Happy Valentine's Day!</p>
+    <div class="img-with-text">
+      <img src="iAkDZWm.jpg" alt="Happy Valentine's Day!" width="500" height="333"/>
+      <p>Happy Valentine's Day!</p>
+    </div>
   </body>
 </html>
