--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <body>
     <div class="img-with-text">
-      <img src="iAkDZWm.jpg" alt="Happy Valentine's Day!" width="500" height="333"/>
-      <p>Happy Valentine's Day!</p>
+      <img src="iAkDZWm.jpg" alt="Functionality coming soon" width="500" height="333"/>
+      <p>Functionality coming soon</p>
     </div>
   </body>
 </html>
